fix(gauge-card): trends were cutoff on bottom of card

--- a/packages/react/src/components/GaugeCard/_gauge-card.scss
+++ b/packages/react/src/components/GaugeCard/_gauge-card.scss
@@ -2,10 +2,12 @@
 
 .#{$iot-prefix}--gauge-container {
   display: flex;
-  flex-wrap: wrap;
   font-size: carbon--type-scale(1);
   height: 100%;
   width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .#{$iot-prefix}--gauge {
@@ -40,30 +42,18 @@
 }
 
 .#{$iot-prefix}--gauge-value-sm {
-  &.#{$iot-prefix}--gauge-value__centered {
-    transform: translateY(0.75rem);
-  }
-
   tspan:first-of-type {
     font-size: 1rem;
   }
 }
 
 .#{$iot-prefix}--gauge-value-md {
-  &.#{$iot-prefix}--gauge-value__centered {
-    transform: translateY(0.75rem);
-  }
-
   tspan:first-of-type {
     font-size: 1.25rem;
   }
 }
 
 .#{$iot-prefix}--gauge-value-lg {
-  &.#{$iot-prefix}--gauge-value__centered {
-    transform: translateY(1rem);
-  }
-
   tspan:first-of-type {
     font-size: 1.75rem;
   }
@@ -74,11 +64,9 @@
 }
 
 .#{$iot-prefix}--gauge-trend {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  margin: auto auto auto 0;
+  margin-top: auto;
   padding-left: $spacing-05;
+  align-self: flex-start;
 
   & p::before {
     border-left: 0.3rem solid transparent;
